# torchwm

./: .buildinfo  .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Dockerfile.frontend  LICENSE  Makefile  README.md  SECURITY.md  api_reference.html  benchmark_cuda_kernels.py  benchmarks.html  brax_env.html  cli.html  configs_reference.html  conftest.py  contributing.html  controllers_guide.html  datasets_guide.html  diamond.html  dit.html  docker-compose.yml  dreamer.html  dreamer_eval.py  dreamer_try.py  dreamer_v1_eval.py  dw_try.py  environments_guide.html  evaluation_guide.html  export_guide.html  genie.html  genindex.html  getting_started.html  index.html  inference_guide.html  (+32 more)
.doctrees/: api_reference.doctree  benchmarks.doctree  cli.doctree  configs_reference.doctree  contributing.doctree  controllers_guide.doctree  datasets_guide.doctree  dreamer.doctree  environment.pickle  environments_guide.doctree  evaluation_guide.doctree  export_guide.doctree  genie.doctree  getting_started.doctree  index.doctree  iris.doctree  jepa.doctree  memory_guide.doctree  modular_rssm_guide.doctree  operators_guide.doctree  package_overview.doctree  public_api.doctree  world_models_deep_dive.doctree
.doctrees/datasets/: nuplan.doctree
.doctrees/environments/: dmc.doctree  dmlab.doctree  gym.doctree  index.doctree  procgen.doctree  vectorized.doctree  world_model.doctree  wrappers.doctree
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml  linter.yml  test.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  linter.yml  mypy.yml  publish-electron.yml  publish-pypi.yml  python-publish.yml  test-env-dmc.yml  test-env-general.yml  test-env-gym.yml  test-env-procgen.yml  test-env-unity.yml  test.yml
_modules/: index.html
_modules/benchmarks/: atari_100k.html
_modules/world_models/: api.html  envs.html  export.html
_sources/: api_reference.md.txt  api_reference.rst.txt  configs_reference.md.txt  datasets_guide.md.txt  diamond.md.txt  dit.md.txt  dreamer.md.txt  environments_guide.md.txt  genie.md.txt  getting_started.md.txt  index.rst.txt  inference_guide.md.txt  installation.md.txt  operators_guide.md.txt  package_overview.md.txt  plugin_registry.md.txt  training_guide.md.txt  vision_guide.md.txt  world_models_deep_dive.md.txt
_sources/environments/: atari.md.txt  brax.md.txt  unity.md.txt
_static/: custom.css
benchmarks/: __init__.py  atari_100k.py
binder/: requirements.txt
datasets/: nuplan.html
docs/source/: api_reference.rst  benchmarks.md  brax_env.md  brax_tutorial.md  cli.md  conf.py  configs_reference.md  contributing.md  controllers_guide.md  dit.md  dreamer.md  environments_guide.md  evaluation_guide.md  genie.md  getting_started.md  index.rst  inference_guide.md  installation.md  iris.md  isaaclab_tutorial.md  jepa.md  losses_guide.md  mathjax_config.js  modular_rssm_guide.md  operators_guide.md  package_overview.md  planet.md  run_code_in_docs.md  simulator.rst  training_guide.md  visualization.md  world_models_guide.md
electron/: README.md  main.js  package-lock.json  package.json  preload.js  renderer.html
environments/: atari.html  brax.html  dmc.html  dmlab.html  gym.html  index.html  mujoco.html  procgen.html  robotics.html  unity.html  vectorized.html  world_model.html  wrappers.html
envs/: __init__.py  dreamer_envs.py  mujoco_env.py
evals/: __init__.py  diamond_utils.py  fid.py  fvd.py  lpips.py  psnr.py
examples/: benchmark_all_agents.py  benchmark_iris.py  benchmark_run_and_report.py  dreamer_example.py  iris_example.py  pybullet_diamond_train.py  rl_harness_example.py  run_dreamer_brax.py  run_dreamer_procgen.py  run_dreamer_robotics.py  visualization_trackers_example.py  visualize_world_model.py
examples/sim/: gym_example.py  run_headless.py
notebooks/: 01_dreamer_tutorial.ipynb  02_iris_tutorial.ipynb  03_jepa_tutorial.ipynb  04_diamond_planet_tutorial.ipynb
pr-preview/pr-108/: .buildinfo  api_reference.html  brax_tutorial.html  dit.html  dreamer.html  genindex.html  getting_started.html  index.html  iris.html  isaaclab_tutorial.html  jepa.html  objects.inv  package_overview.html  py-modindex.html  search.html  searchindex.js
pr-preview/pr-109/: .buildinfo  api_reference.html  dit.html  dreamer.html  genindex.html  getting_started.html  index.html  iris.html  jepa.html  package_overview.html  py-modindex.html  search.html
scripts/: benchmark_vector_env_speed.py  eval_diamond.py  infer_genie_tinyworlds.py  play_base.py  play_diamond.py  smoke_test_iris.py  smoke_train.py  train_diamond.py  train_genie_tinyworlds.py
tests/: test_checkpoint_hidden_state.py  test_cli.py  test_config_serialization.py  test_controller.py  test_cuda_kernels.py  test_decoder.py  test_determinism.py  test_determinism_regressions.py  test_device.py  test_diamond.py  test_dreamer.py  test_dreamer_integration.py  test_dreamer_rssm.py  test_dreamer_utils.py  test_encoder.py  test_env_adapters.py  test_envs.py  test_experiment_config.py  test_genie.py  test_genie_integration.py  test_helpers.py  test_iris_decoder.py  test_iris_integration.py  test_jepa_integration.py  test_jepa_utils.py  test_memory.py  test_modular_rssm.py  test_operators.py  test_optional_dependencies.py  test_planet.py  test_policy_hidden_state_imagination.py  test_preconditioner_consistency.py  test_public_api.py  test_reproducible_imagination.py  test_sim.py  test_trainers.py  test_transforms.py  test_utils.py  test_vector_env.py  test_video_datasets.py  (+1 more)
tools/: __init__.py  bench_throughput.py  check_docs_render.py  cli.py  replay_browser.py
torchwm/: __init__.py
torchwm_ui/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
tutorials/: world_model_env_rl_libraries.html  world_model_env_rl_libraries_notebook.html  world_model_env_rl_libraries_notebook.ipynb
world_models/: __init__.py  api.py  catalog.py  cuda_kernels.py  device.py  export.py  registry.py
(+9388 files in other folders)
