[project]
name = "torchwm"
version = "0.4.2"
description = "A Modular Pytorch Based library for training world models"
readme = "README.md"
authors = [
    { name = "Param Thakkar" },
]
requires-python = ">=3.11"
license = "MIT"
keywords = ["world-models", "pytorch", "mbrl"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "albumentations>=2.0.8",
    "ale-py>=0.11.2",
    "cma>=4.4.2",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "torchaudio>=2.1.0",
    "einops>=0.8.2",
    "pyyaml>=6.0.3",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.2",
    "tqdm>=4.67.1",
    "opencv-python>=4.12.0.88",
    "requests>=2.32.0",
    "click>=8.0.0",
    "gym>=0.26.2",
    "gymnasium[box2d]>=1.2.2",
    "mlagents-envs>=0.28.0",
    "moviepy>=2.2.1",
    "h5py>=3.11.0",
    "plotly>=6.5.0",
    "selenium>=4.41.0",
    "scikit-learn>=1.8.0",
    "umap-learn>=0.5.11",
    "huggingface-hub>=1.14.0",
    "playwright>=1.60.0",
]

[project.urls]
Homepage = "https://github.com/paramthakkar123/torchwm"
Documentation = "https://paramthakkar123.github.io/torchwm/"
Issues = "https://github.com/paramthakkar123/torchwm/issues"
Changelog = "https://github.com/paramthakkar123/torchwm/releases"

[project.scripts]
torchwm = "tools.cli:run"

[project.optional-dependencies]
gym = [
    "huggingface-hub>=0.23.0",
    "pygame>=2.6.1",
    "autorom>=0.6.1",
]
ml-agents = [
    "mlagents-envs>=0.28.0",
]
mujoco = [
    "mujoco>=3.2.0",
]
robotics = [
    "gymnasium-robotics>=1.3.0",
]
brax = [
    "brax>=0.13.0",
    "jax>=0.10.1",
]
procgen = [
    "procgen>=0.10.7",
]
bsuite = [
    "bsuite>=0.3.5",
]
viz = [
    "fastapi[standard]>=0.116.0",
    "uvicorn>=0.35.0",
    "myst-parser>=2.0.0,<5.0.0",
    "nbsphinx>=0.9.8",
]
ml = [
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "wandb>=0.16.0",
]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pre-commit>=4.5.0",
    "mypy>=1.19.1",
]
all = [
    "torchwm[gym,viz,ml,ml-agents,mujoco,robotics,brax,procgen,bsuite,dev,docs]",
]
docs = [
    "sphinx>=8.0.0,<9.0.0",
    "sphinx-autodoc-typehints<1.26.0",
    "sphinx-copybutton>=0.5.2",
    "pydata-sphinx-theme>=0.15.0",
    "sphinx-rtd-theme>=3.1.0",
    "sphinxcontrib-bibtex>=2.6.5",
    "sphinxcontrib-mermaid>=0.9.0",
    "sphinx-thebe>=0.3.0",
    "sphinxext-opengraph>=0.13.0",
    "myst-parser>=2.0.0,<5.0.0",
    "nbsphinx>=0.9.8",
]


[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that are expensive enough to skip in the default fast subset",
    "gpu: tests that require a CUDA-capable GPU",
    "integration: tests that exercise external services, optional backends, or cross-package workflows",
    "selenium: tests that require Selenium WebDriver and a running web stack",
]
