[project]
name = "torchwm"
dynamic = ["version"]
description = "A Modular Pytorch Based library for training world models"
readme = "README.md"
authors = [
    { name = "Param Thakkar" },
]
requires-python = ">=3.11"
license = "MIT"
keywords = ["world-models", "pytorch", "mbrl"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "einops>=0.8.2",
    "gymnasium[box2d]>=1.2.2",
    "tqdm>=4.67.1",
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/paramthakkar123/torchwm"
Documentation = "https://paramthakkar123.github.io/torchwm/"
Issues = "https://github.com/paramthakkar123/torchwm/issues"
Changelog = "https://github.com/paramthakkar123/torchwm/releases"

[project.scripts]
torchwm = "tools.cli:run"
torchwm-train = "tools.cli:run_train"

[project.optional-dependencies]
gym = [
    "huggingface-hub>=0.23.0",
    "pygame>=2.6.1",
    "autorom>=0.6.1",
]
ml-agents = [
    "mlagents-envs>=0.29.0",
]
mujoco = [
    "mujoco>=3.2.0",
]
robotics = [
    "gymnasium-robotics>=1.3.0",
]
brax = [
    "brax>=0.13.0",
    "jax>=0.10.1",
]
procgen = [
    "procgen>=0.10.7",
]
bsuite = [
    "bsuite>=0.3.5",
]
viz = [
    "opencv-python>=4.12.0.88",
    "umap-learn>=0.5.11",
    "scikit-learn>=1.8.0",
    "plotly>=6.5.0",
    "fastapi[standard]>=0.116.0",
    "uvicorn>=0.35.0",
    "myst-parser>=2.0.0,<5.0.0",
    "nbsphinx>=0.9.8",
    "python-multipart>=0.0.27",
    "starlette>=1.0.1",
]
ml = [
    "torchaudio>=0.13.0",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "wandb>=0.16.0",
]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.3.1",
    "pre-commit>=4.5.0",
    "mypy>=1.19.1",
    "gitpython>=3.1.49",
]
selenium = [
    "selenium>=4.30.0",
]
all = [
    "torchwm[gym,viz,ml,ml-agents,mujoco,robotics,brax,procgen,bsuite,selenium,dev,docs]",
]
docs = [
    "sphinx>=8.0.0,<9.0.0",
    "sphinx-autodoc-typehints<1.26.0",
    "sphinx-copybutton>=0.5.2",
    "pydata-sphinx-theme>=0.15.0",
    "sphinx-rtd-theme>=3.1.0",
    "sphinxcontrib-bibtex>=2.6.5",
    "sphinxcontrib-mermaid>=0.9.0",
    "sphinx-thebe>=0.3.0",
    "sphinxext-opengraph>=0.13.0",
    "myst-parser>=2.0.0,<5.0.0",
    "nbsphinx>=0.9.8",
    "mistune>=3.2.1",
    "nbconvert>=7.17.1",
]

[tool.setuptools.packages.find]
include = ["world_models", "world_models.*", "torchwm", "torchwm.*"]

[tool.setuptools.package-data]
torchwm = ["py.typed", "__init__.pyi"]

[tool.uv]
index-url = "https://download.pytorch.org/whl/cu121"
extra-index-url = ["https://pypi.org/simple"]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
default = true

[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "world_models._version.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that are expensive enough to skip in the default fast subset",
    "gpu: tests that require a CUDA-capable GPU",
    "integration: tests that exercise external services, optional backends, or cross-package workflows",
    "selenium: tests that require Selenium WebDriver and a running web stack",
]
